--- a/src/components/swipers/introSwiper/IntroSwiper.module.css
+++ b/src/components/swipers/introSwiper/IntroSwiper.module.css
@@ -24,6 +24,8 @@
 /* Intro Swiper Mask */
 
 .introSwiperImgMask {
+    -webkit-mask: url("../../../assets/intro/intro_mask.png") center no-repeat;
+    -webkit-mask-size: 100% 100%;
     mask: url("../../../assets/intro/intro_mask.png") center no-repeat;
     mask-size: 100% 100%;
     background-color: #FFFFFF;
