1. Order Form Page (updated) - Form was added. 2. Form (done) - I build my own form constructor with "React Hook Form", I don't need it in this project for sure but in the future it will be easy for me to build hard forms by this constructor. 3. Input (updated) - radio, checkbox style handler was implemented.

--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -23,7 +23,7 @@
 }
 
 .footerTitle {
-    font-size: 16px;
+    font-size: 1.111vw;
     line-height: 19px;
     color: #FFFFFF;
 
@@ -76,6 +76,7 @@
 
 .footerContactsSearch {
     grid-area: third;
+    max-width: 290px;
     margin-top: 34px;
 }
 
