--- a/src/index.css
+++ b/src/index.css
@@ -43,17 +43,17 @@ h1, h2, h3, h4, p {
 .swiper-button-next {
   background-color: #FFB5C6;
   color: white;
-  width: 70px;
-  height: 70px;
+  width: 4.861vw;
+  height: 4.861vw;
 
   border-radius: 50%;
-  --swiper-button-animation-bottom: 5px;
+  --swiper-button-animation-bottom: 0.3472vw;
   --swiper-button-animation-scale: 0.5;
 }
 
 .swiper-button-prev:hover,
 .swiper-button-next:hover {
-  --swiper-button-animation-bottom: -30px;
+  --swiper-button-animation-bottom: -2.083vw;
   --swiper-button-animation-scale: 1.3;
 }
 
@@ -70,19 +70,19 @@ h1, h2, h3, h4, p {
 .swiper-button-prev::after,
 .swiper-button-next::after {
   content: '';
-  width: 15px;
-  height: 24px;
+  width: 1.041vw;
+  height: 1.666vw;
 
   position: relative;
 }
 
 .swiper-button-prev::after {
-  right: 2px;
+  right: 0.1388vw;
   background-image: url("assets/Prev.svg");
 }
 
 .swiper-button-next::after {
-  left: 2px;
+  left: 0.1388vw;
   background-image: url("assets/Next.svg");
 }
 
@@ -90,8 +90,8 @@ h1, h2, h3, h4, p {
 .swiper-button-next::before {
   content: '';
   position: absolute;
-  width: 35px;
-  height: 42px;
+  width: 2.430vw;
+  height: 2.916vw;
   bottom: var(--swiper-button-animation-bottom);
   transform: scale(var(--swiper-button-animation-scale));
 
@@ -99,11 +99,11 @@ h1, h2, h3, h4, p {
 }
 
 .swiper-button-prev::before {
-  right: 12px;
+  right: 0.8333vw;
   background-image: url("assets/PrevBottom.svg");
 }
 
 .swiper-button-next::before {
-  left: 12px;
+  left: 0.8333vw;
   background-image: url("assets/NextBottom.svg");
 }
