--- a/src/components/navbar/NavBar.module.scss
+++ b/src/components/navbar/NavBar.module.scss
@@ -63,9 +63,26 @@
     display: flex;
     align-items: center;
     pointer-events: none;
-}
+    position: relative;
 
-.navbarIconsImg {
-    pointer-events: all;
-    height: 1.666vw;
+    & > img {
+        pointer-events: all;
+        height: 1.666vw;
+    }
+
+    & > span {
+        text-decoration: none;
+        text-align: center;
+        vertical-align: center;
+        background-color: #ff8eb4;
+        color: #FFFFFF;
+
+        width: 22px;
+        height: 22px;
+        border-radius: 50%;
+
+        left: 100%;
+        position: absolute;
+    }
+
 }
